--- a/pages/inicio_user.html
+++ b/pages/inicio_user.html
@@ -138,7 +138,7 @@
     </div>
     <script src="/scripts/autocomplete.js"></script>
     <script src="/scripts/forms.js"></script>
-    <script src="/scripts/listMechanics.js"></script>
+    <script src="/scripts/listMechanicsExpress.js"></script>
     <script src="/scripts/map.js"></script>
     <script src="/scripts/sidebar.js"></script>
     <script src="/scripts/session.js"></script>
