--- a/pages/inicio_user.html
+++ b/pages/inicio_user.html
@@ -121,12 +121,12 @@
 
     <div id="sidebar" class="sidebar">
         <a href="#" class="closebtn" onclick="toggleSidebar()">&times;</a>
-        <i class="fa-solid fa-circle-user"></i> <br> <br>
+        <i class="fa-solid fa-circle-user" id="fotoPerfil"></i> <br> <br>
         <a href="#" on>Modificar Perfil</a>
         <a href="#">Solicitar Servicio</a>
         <a href="#">Chats</a>
         <a href="#" onclick="mostrarFormulario('contacto')">Ayuda</a>
-        <a href="#" onclick="cerrarSesion()">Cerrar Sesión</a>
+        <a href="#" onclick="cerrarSesion()">Cerrar Sesión <i class="fa-solid fa-right-from-bracket"></i></a>
         <div class="sidebar-footer">
             <a href="#" onclick="mostrarFormulario('terminos-condiciones')">Términos y Condiciones</a>
         </div>
