--- a/pages/inicio_user.html
+++ b/pages/inicio_user.html
@@ -38,7 +38,7 @@
                                     </path>
                                 </svg>
                             </div>
-                            <input class="search_input" placeholder="search" type="text">
+                            <input class="search_input" placeholder="Buscar Mecanicos" type="text">
                         </div>
                     </div>
                 </li>
