cambio los cards de servicio
tambien agrego mas cards

--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
                     <img src="/img/img_modificaciones.png" alt="Modificaciones">
                     <button class="servicio-boton">Modificaciones</button>
                 </div>
+                <div class="servicio-item">
+                    <img src="/img/img_lavado.png" alt="Lavado">
+                    <button class="servicio-boton">Lavado</button>
+                </div>
+                <div class="servicio-item">
+                    <img src="/img/img_serviciogrua.png" alt="Servicio de Grua">
+                    <button class="servicio-boton">Servicio de Grua</button>
+                </div>
+                <div class="servicio-item">
+                    <img src="/img/img_taller.png" alt="Taller">
+                    <button class="servicio-boton">Talleres</button>
+                </div>
             </div>
         </section>
         <section id="nosotros"> <!-- crear seccion de nosotros-->
