--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                     <button type="submit">Ingresar</button> <br> <br>
                     <a href="#" onclick="mostrarFormulario('crear-cuenta')" id="registro_link">Crear Cuenta</a><br>
                     <br>
-                    <a href="#" id="recuperar_password_link" onclick="mostrarFormulario('resetPassword')">¿Olvidaste tu contraseña?</a>
+                    <a href="#" id="recuperar_password_link" onclick="mostrarFormulario('resetPassword')">¿Olvidaste tu
+                        contraseña?</a>
                 </form>
             </div>
         </div>
@@ -165,7 +166,7 @@
                         <label for="correo-contacto">Escribe tu direccion email:</label>
                         <input type="email" id="correo-contacto" name="correo-contacto" required
                             placeholder="ec-fix@gmail.com">
-                            <p>Te enviaremos un correo a tu email en donde podras cambiar tu password.</p> <br>
+                        <p>Te enviaremos un correo a tu email en donde podras cambiar tu password.</p> <br>
                         <button type="submit">Enviar</button>
                     </div>
                 </form>
